# BluetoothManager

./: .gitignore  README.md  pubspec.yaml
installer/: BluetoothAudioManager.iss
lib/: app_controller.dart  bluetooth_audio_platform.dart  main.dart  models.dart
scripts/: build_installer.ps1  install.ps1  package_portable.ps1  uninstall.ps1
test/: models_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  audio_manager.cpp  audio_manager.h  audio_session_monitor.cpp  audio_session_monitor.h  flutter_window.cpp  flutter_window.h  main.cpp
windows/service/: CMakeLists.txt  service_main.cpp
